<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="0"
              android:textSize="@dimen/textViewTextSize"
              android:layout_marginTop="@dimen/bMT"
              android:layout_marginRight="@dimen/bMR"
              android:layout_marginLeft="@dimen/bML"
              android:padding="@dimen/textViewPadding"
              android:background="@drawable/textview_shape"
              android:gravity="right|bottom"
              tools:ignore="RtlHardcoded"/>
    <GridLayout
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:columnCount="5"
                android:rowCount="6"
    >
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_1"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"

        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_2"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_3"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_4"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_5"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_6"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_7"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_8"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_9"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_10"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_11"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_12"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_13"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_14"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_15"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_16"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_17"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_18"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_19"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_20"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_21"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_22"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_23"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"

        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_24"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_25"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
                android:layout_rowSpan="2"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_26"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
                android:layout_columnSpan="2"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_27"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/bML"
                android:layout_marginRight="@dimen/bMR"
                android:layout_marginTop="@dimen/bMT"
                android:text="@string/cbtn_28"
                android:textSize="@dimen/textSize"
                android:textColor="@color/button_text"
                android:background="@drawable/button_shape"
                android:layout_columnWeight="@string/columWeight"
                android:layout_rowWeight="@string/rowWeight"
        />

    </GridLayout>
</LinearLayout>